dodani komentari za kolege

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <body>
     <div class="flex">
       <div id="kontrole">
-        <div>Trenutni nivo: <span id="nivo">1</span></div>
         <div>Preostalo vrijeme: <span id="vrijeme">20</span> sekundi</div>
-        <button id="startStop" onclick="zapocniIgru()">Započni igru</button>
+        <button id="startStop" onclick="glavnaFunkcija()">Započni igru</button>
       </div>
       <p id="paragraph">Status igre:</p>
     </div>
